--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
+    implementation 'com.anjlab.android.iab.v3:library:1.0.44'
 
 }
